fix for too much whitespace in status messages

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -338,6 +338,10 @@ a.link_button_green_large {
   ul {
     margin: 0;
   }
+
+  h1 {
+    margin-top: 0;
+  }
 }
 
 #notice, #request_header_text {
